# auth_service_project

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sql.sql
alembic/: env.py
alembic/versions/: 6220b3120b1e_initial_migration.py
src/app/: config.py  database.py  logconfig.py  main.py  models.py  service.py
src/app/repositories/: abc_repository.py  postgres_repository.py  redis_repository.py
src/tests/: test_serivce.py
